♻️ "refactor: 코드 리뷰 반영 - 메서드 분리 및 Soft Delete 조회 로직 수정" [#15]